Azure AD Connect post lab cleanup

--- a/Instructions/20533D_LAB_AK_10.md
+++ b/Instructions/20533D_LAB_AK_10.md
@@ -277,7 +277,25 @@
 
 11. Click **Done customizing**.
 
-12. Close all open windows.
+12. On MIA-CL1, click **Start**, in the Start menu, expand the **Windows PowerShell** folder, right-click **Windows PowerShell**, click **More**, and then click **Run as administrator**. When prompted by User Account Control for confirmation, click **Yes**.
+
+13. In the Administrator: Windows PowerShell window, enter the following command and press Enter:
+
+  ```
+  Connect-MsolService
+  ```
+
+14. In the **Sign in** dialog box, enter the full name (including the @_domain name_.onmicrosoft.com suffix) of the SyncAdmin account you used in this lab and then click **Next**.
+
+15. In the **Enter password** dialog box, enter the password of the SyncAdmin account and click **Sign in**.
+
+16. At the Windows PowerShell prompt, enter the following command and press Enter:
+
+  ```
+  Set-MsolDirSyncEnabled -EnableDirSync $false -Force
+  ```
+
+17. Close all open windows.
 
 > **Result**: After completing this exercise, you should have changed attributes on a user account, and then forced synchronization. 
 
