--- a/Instructions/20533D_LAB_10.md
+++ b/Instructions/20533D_LAB_10.md
@@ -49,7 +49,7 @@ The main tasks for this exercise are as follows:
 
 3. In the Microsoft Edge window, navigate to the Azure portal and, when prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-4. If necessary, in the Azure portal, switch to the Azure Active Directory tenant associated with the Azure subscription that you chose when running the provisioning script at the beginning of this module. .
+4. If necessary, in the Azure portal, switch to the Azure Active Directory tenant associated with the Azure subscription that you chose when running the provisioning script at the beginning of this module.
 
 5. Initiate a Remote Desktop Protocol (RDP) session to **20533D1001-vm1**, and then sign in as **ADATUM\\Student** with the password **Pa55w.rd1234**.
 
