the Azure portal interface updates

--- a/Instructions/20533D_LAB_AK_11.md
+++ b/Instructions/20533D_LAB_AK_11.md
@@ -9,29 +9,27 @@
 
 2. Start Microsoft Edge and browse to [**https://portal.azure.com**](https://portal.azure.com). When prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription. 
 
-3. Hover the mouse over the user name entry in the upper right corner of the Azure portal and ensure that you are signed on to the correct subscription. If not, click the user name entry and, in the drop-down menu, click the entry representing the Azure subscription that you chose when running the provisioning script at the beginning of this module. 
+3. Note the user name entry in the upper right corner of the Azure portal and ensure that you are signed on to the correct Azure Active Direcory tenant. If not, click the **Directory + subscription** filter icon appearing directly to the left of your name in the upper right corner of the Azure portal and, in the **Directory + Subscription** pane, click the name of the Azure Active Directory tenant associated with the Azure subscription that you chose when running the provisioning script at the beginning of this module.  
 
 4. In the hub menu of the Azure portal, click **All services** and then, in the service menu, click **Virtual machines**. On the **Virtual machines** blade, note **20533D1101-vm0** and **20533D1101-vm1** virtual machines with the running status.
 
-5. In the hub menu, click **+ Create resource**, and then click **Monitoring + Management**.
+5. In the hub menu, click **+ Create resource**, and then click **Management Tools**.
 
 6. Click **Automation**.
 
-7. On the Add Automation Account blade, specify the following:
+7. On the Add Automation Account blade, specify the following and click **Create**:
 
   - Name: **AutomationAccount-20533D11**
 
-  - Subscription: _the name of your Azure subscription_
+  - Subscription: the name of your Azure subscription
 
   - Resource group: ensure that the **Create new** option is selected and type **20533D1102-LabRG** in the text box
 
-  - Location: _the same Azure region that you chose when running **Add-20533DEnvironment** script at the beginning of this module or, if not available, another region close to it_
+  - Location: the same Azure region that you chose when running **Add-20533DEnvironment** script at the beginning of this module or, if not available, another region close to it
 
   - Create Azure Run As account: **Yes**
 
-8. Click **Create**.
-
-9. Wait for the Automation account to be provisioned. This should take less than a minute.
+8. Wait for the Automation account to be provisioned. This should take less than a minute.
 
 
 #### Task 2: Create and review Automation assets
@@ -162,7 +160,7 @@
 
 8. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-9. In the Azure portal, click **Edit dashboard**.
+9. In the Azure portal, on Dashboard, click **Edit**.
 
 10. Right-click unoccupied area of the dashboard and, in the right-click menu, click **Reset to default state**. When prompted to confirm, click **Yes**.
 
