the Azure portal interface updates

--- a/Instructions/20533D_LAB_11.md
+++ b/Instructions/20533D_LAB_11.md
@@ -3,7 +3,7 @@
   
 ### Scenario
   
- A. Datum Corporation wishes to minimize administrative overhead as much as possible, especially for tasks such as deploying and deprovisioning VMs. For this reason, as part of A. Datum's evaluation of Microsoft Azure, you have been asked to test the new Azure Automation features and, as part of your tests, manage Azure VMs by using runbook automation.
+ Adatum Corporation wishes to minimize administrative overhead as much as possible, especially for tasks that involve management of VMs. For this reason, as part of Adatum’s evaluation of Microsoft Azure, you have been asked to configure an Automation account and use its features to automate the most common VM management tasks.
 
 
 ### Objectives
@@ -32,7 +32,7 @@
   
 ### Scenario
   
- Administrators at A. Datum Corporation spend considerable time managing Azure VMs. You want to increase administrator productivity by using Automation to execute such tasks as shuttting down Azure VMs at the end of the day.
+ Administrators at Adatum Corporation spend considerable time managing VMs. You want to increase administrator productivity by using Automation to manage VMs.
 
 The main tasks for this exercise are as follows:
 
@@ -45,7 +45,7 @@ The main tasks for this exercise are as follows:
   
 1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**, and that the setup script you ran in the previous demonstration to prepare the environment has completed.
 
-2. Start Microsoft Edge and sign in to the Azure portal by using the Microsoft account that is the Service Administrator of your Azure subscription. If necessary, in the Azure portal, switch to the Default Directory.
+2. Start Microsoft Edge and sign in to the Azure portal by using the Microsoft account that is the Service Administrator of your Azure subscription. If necessary, in the Azure portal, switch to the Azure Active Directory tenant associated with the Azure subscription that you chose when running the provisioning script at the beginning of this module.
 
 3. From the **Virtual machines** blade, note that **20533D1101-vm0** and **20533D1101-vm1** virtual machines are currently running.
 
@@ -123,7 +123,7 @@ The main tasks for this exercise are as follows:
   
 ### Scenario
   
- As part of your tests of the new Azure Automation features, you will now deploy Azure virtual machines by using an Automation runbook.
+ As part of your tests of the new Automation features, you will stop an Azure VM by using an Automation runbook.
 
 The main tasks for this exercise are as follows:
 
