update to address #335

--- a/Instructions/20533D_LAB_AK_06.md
+++ b/Instructions/20533D_LAB_AK_06.md
@@ -352,6 +352,7 @@
 
 6. Click **Delete**. When prompted to confirm, click **Yes**.
 
+> **Note**: If step 4 did not complete successfully, the Recovery Services Vault cannot be deleted. If this you will not be able to delete the resource group containing the vault. In such case, simply continue to the next module.
 
 #### Task 7: Remove the lab environment
   
