an update to address #335

--- a/Instructions/20533D_LAB_AK_06.md
+++ b/Instructions/20533D_LAB_AK_06.md
@@ -338,21 +338,24 @@
 
 #### Task 6: Stop backups and delete the Azure Recovery services vault
   
-1. On the **Backup Items (Azure Backup Agent)** blade, click the entry referencing the **E:\\** drive of **mia-cl1.**.
+1. In the Azure portal, on the Recovery Services vault blade, scroll down to the **MANAGE** section and click **Backup Infrastructure**. Then click **Protected Servers**.
 
-2. On the **E:\\ on mia-cl1.** blade, click the **mia-cl1.** link (under the Computer Name section).
+2. On the **PROTECTED SERVERS** blade, click **Azure Backup Agent**.
 
-3. On the **mia-cl1.** blade, click **Delete**. 
+3. On the **Protected Servers (Azure Backup Agent)** blade, verify that there is an entry referencing MIA-CL1. Click the **MIA-CL1.** link.
 
-4. On the **Delete** blade, in the **TYPE THE SERVER NAME** text box, type **mia-cl1.** and click **Delete**.
+4. On the **MIA-CL1.** blade, click **Delete**.
 
-> **Note**: Don't forget to add the dot at the end of the server name.
+5. On the **Delete** blade, in the **TYPE THE SERVER NAME** text box, type **MIA-CL1.** and click Delete. This should de-register the server. 
 
-5. Navigate back to the recovery services vault blade and click **Overview**. 
+> **Note**: The entry **MIA-CL1.** is case-sensitive and includes the trailing period. If the Delete (de-register) does not complete, the Recovery Services Vault cannot be deleted later. If this happens just continue with the next exercise.
 
-6. Click **Delete**. When prompted to confirm, click **Yes**.
+6. Scroll back left to the Recovery Services Vault blade and click **Overview**. You may have to scroll up also.
 
-> **Note**: If step 4 did not complete successfully, the Recovery Services Vault cannot be deleted. If this you will not be able to delete the resource group containing the vault. In such case, simply continue to the next module.
+7. Click **Delete**. When prompted to confirm, click **Yes**. 
+
+> **Note**: Wait for the vault to be deleted. If the Delete (de-register) did not complete earlier, the Recovery Services Vault cannot be deleted. If this happens just continue with the next exercise.
+
 
 #### Task 7: Remove the lab environment
   
