an update to account for #335

--- a/Instructions/20533D_LAB_AK_06.md
+++ b/Instructions/20533D_LAB_AK_06.md
@@ -348,13 +348,13 @@
 
 5. On the **Delete** blade, in the **TYPE THE SERVER NAME** text box, type **MIA-CL1.** and click Delete. This should de-register the server. 
 
-> **Note**: The entry **MIA-CL1.** is case-sensitive and includes the trailing period. If the Delete (de-register) does not complete, the Recovery Services Vault cannot be deleted later. If this happens just continue with the next exercise.
+> **Note**: The entry **MIA-CL1.** is case-sensitive and includes the trailing period. If the Delete (de-register) does not complete, the Recovery Services Vault cannot be deleted later. If this happens, continue with the next exercise.
 
 6. Scroll back left to the Recovery Services Vault blade and click **Overview**. You may have to scroll up also.
 
 7. Click **Delete**. When prompted to confirm, click **Yes**. 
 
-> **Note**: Wait for the vault to be deleted. If the Delete (de-register) did not complete earlier, the Recovery Services Vault cannot be deleted. If this happens just continue with the next exercise.
+> **Note**: Wait for the vault to be deleted. If the Delete (de-register) you invoked in step 5 did not complete, the Recovery Services Vault cannot be deleted. If this happens, continue with the next exercise.
 
 
 #### Task 7: Remove the lab environment
