--- a/Instructions/20533D_LAB_03.md
+++ b/Instructions/20533D_LAB_03.md
@@ -62,7 +62,7 @@ The main tasks for this exercise are as follows:
 
   -  Location: an Azure region close to the location of the lab environment, in which you can provision Azure VMs
 
-  -  Size: any available size with one or two vCPUs
+  -  Size: any available size with one vCPU
 
   -  Use managed disks: **Yes**
 
