--- a/Instructions/20533D_LAB_AK_03.md
+++ b/Instructions/20533D_LAB_AK_03.md
@@ -27,7 +27,7 @@
 
 6. In the Location drop-down list, select an Azure region close to the location of the lab environment, in which you can provision Azure VMs and click **OK**.
 
-7. On the Choose a size blade, select any of available sizes with one or two vCPUs, and then click **Select**.
+7. On the Choose a size blade, select any of available sizes with one vCPU, and then click **Select**.
 
 8. On the Settings blade, ensure that **Use managed disk** is set to **Yes**.
 
