--- a/Instructions/20533D_LAB_03.md
+++ b/Instructions/20533D_LAB_03.md
@@ -286,6 +286,8 @@ The main tasks for this exercise are as follows:
   - adminPassword: **Pa55w.rd1234**
 
   - virtualNetworkName: **20533D0301-LabVNet**
+  
+  - VM Size: **use the same as for the "ADD-20533DEnvironment" command**
 
 
 #### Task 2: Use the Azure portal to monitor deployment
