Azure portal updates

--- a/Instructions/20533E_LAB_03.md
+++ b/Instructions/20533E_LAB_03.md
@@ -72,13 +72,19 @@ The main tasks for this exercise are as follows:
 
   -  Size: any available size with one vCPU
 
+  -  Availability zone: **None**
+  
+  -  Availability set: **20533E0301-db-avset** with 2 fault domains and 5 update domains
+
   -  Use managed disks: **Yes**
-
-  -  Availability set: **20533E0301-db-avset** with 3 fault domains and 5 update domains
-
+  
   -  Virtual network: **20533E0301-labVNet** with address space **10.0.0.0/20** and a subnet named **database** with the address range **10.0.0.0/24**
+  
+  -  Network Security Group: **Basic**
+  
+  -  Select public inbound ports: **RDP (3389)**
 
-  -  Accept the default settings for the **Public IP address**, **Network security group (firewall)**, **Extensions**, **Auto-shutdown**, **Monitoring**, **Managed service identity**, and **Backup** configuration.
+  -  Accept the default settings for the **Public IP address**, **Extensions**, **Auto-shutdown**, **Monitoring**, **Managed service identity**, and **Backup** configuration.
 
 4. Wait for the deployment to complete successfully.
 
