Azure portal updates

--- a/Instructions/20533E_LAB_AK_03.md
+++ b/Instructions/20533E_LAB_AK_03.md
@@ -29,11 +29,9 @@
 
 7. On the Choose a size blade, select any of available sizes with one vCPU, and then click **Select**.
 
-8. On the Settings blade, ensure that **Use managed disk** is set to **Yes**.
+8. On the Settings blade, leave the **Availability zone** drop-down list with its default entry of **None**, then click **Availability set** and, on the Change availability set blade, click **Create new**.
 
-9. On the Settings blade, leave the **Availability zone** drop-down list with its default entry of **None**, then click **Availability set** and, on the Change availability set blade, click **Create new**.
-
-10. On the Create new blade, specify the following settings and click **OK**:
+9. On the Create new blade, specify the following settings and click **OK**:
 
   -  Name: **20533E0301-db-avset**
 
@@ -43,7 +41,9 @@
 
   -  Use managed disks: **Yes (Aligned)**
 
-11. Back on the Settings blade, click **Virtual network**
+10. Back on the Settings blade, ensure that **Use managed disk** is set to **Yes**.
+
+11. Click **Virtual network**
 
 12. On the Choose virtual network blade, click **Create new**. Next, on the Create virtual network blade, specify the following settings and click **OK**.
 
@@ -55,15 +55,17 @@
 
   -  Subnet address range: **10.0.0.0/24**
 
-13. Accept the default settings for the **Public IP address**, **Network security group (firewall)**, **Extensions**, **Auto-shutdown**, **Monitoring**, **Managed service identity**, and **Backup** configuration.
+13. Ensure that **Network Security Group** is set to **Basic**. In the **Select public inbound ports** drop down list, slect the checkbox next to the **RDP (3389)** entry.
 
-14. On the Settings blade, click **OK**
+14. Accept the default settings for the **Public IP address**, **Extensions**, **Auto-shutdown**, **Monitoring**, **Managed service identity**, and **Backup** configuration.
 
-15. On the Create blade, click **Create**.
+15. On the Settings blade, click **OK**
 
-16. Wait for the deployment to complete successfully.
+16. On the Create blade, click **Create**.
 
-17. Leave the Microsoft Edge with the Azure portal window open.
+17. Wait for the deployment to complete successfully.
+
+18. Leave the Microsoft Edge with the Azure portal window open.
 
 
 #### Task 2: Use Azure PowerShell to create a virtual machine
