Create Docker account
Now needed to login with a docker account to download Docker CE

--- a/Instructions/20533D_LAB_AK_07.md
+++ b/Instructions/20533D_LAB_AK_07.md
@@ -43,11 +43,15 @@
 
 16. On the **Install Docker for Windows** page, click **Download from Docker Store**.
 
-17. On the **Docker Community Edition for Windows** page, click **Get Docker CE for Windows (stable)**.
+17. On the **Docker Community Edition for Windows** page, click **Please login to download**.
 
-18. When prompted whether to run or save **Docker for Windows Installer.exe**, click **Run**.
+18. On the Docker store page click **Create an account** (or use the account provided by your instructor).
 
-19. Once the installation completed, click **Close and log out**.
+19. click **Get Docker CE for Windows (stable)**.
+
+20. When prompted whether to run or save **Docker for Windows Installer.exe**, click **Run**.
+
+21. Once the installation completed, click **Close and log out**.
 
 
 #### Task 2: Use Docker Machine to create hosts in Azure Deploy Docker Toolbox for Windows
