--- a/Instructions/20533D_LAB_AK_08.md
+++ b/Instructions/20533D_LAB_AK_08.md
@@ -390,7 +390,7 @@
 
 - Resource group: **20533D0801-LabRG**
 
-- Resource: leave at its default value
+- Resource: **`cloud-service-name`/production/AdatumAdsWeb**
 
 - Metric: **Network In**
 
