Alert creation UI change
Now need to select the resource.

--- a/Instructions/20533D_LAB_08.md
+++ b/Instructions/20533D_LAB_08.md
@@ -283,7 +283,7 @@ The main tasks for this exercise are as follows:
 
 - Resource group: **20533D0801-LabRG**
 
-- Resource: leave at its default value
+- Resource: **`cloud-service-name`/production/AdatumAdsWeb**
 
 - Metric: **Network In**
 
