--- a/Instructions/20533E_LAB_03.md
+++ b/Instructions/20533E_LAB_03.md
@@ -221,7 +221,7 @@ The main tasks for this exercise are as follows:
 
 4. If there are multiple Azure subscriptions associated with your account, run the **Set-AzureRmContext** with the **-SubscriptionId** parameter to designate the one you want to use in this lab. 
 
-5. From the console pane of the Windows PowerShell ISE window, identify all resources in the resource group **20533E0301-LabRG**, including their **ResourceName** and **ResourceType** properties by running the **Find-AzureRMResource** cmdlet. 
+5. From the console pane of the Windows PowerShell ISE window, identify all resources in the resource group **20533E0301-LabRG**, including their **ResourceName** and **ResourceType** properties by running the **Get-AzureRMResource** cmdlet. 
 
 6. In the cmdlet output, note the resources created in this exercise including virtual machines, disks, NICs, public IPs, and a storage account.
 
