--- a/Instructions/20533E_LAB_AK_03.md
+++ b/Instructions/20533E_LAB_AK_03.md
@@ -221,7 +221,7 @@
 6. Type the following cmdlet, and then press Enter:
 
   ```
-  Find-AzureRMResource -ResourceGroupNameContains 20533E0301-LabRG | Format-Table -Property ResourceName, ResourceType
+  Get-AzureRMResource -ResourceGroupName 20533E0301-LabRG | Format-Table -Property Name, ResourceType
   ```
 
 7. In the cmdlet output, note the resources created in this exercise including virtual machines, disks, NICs, public IPs, and a storage account.
