--- a/Instructions/20533D_LAB_AK_09.md
+++ b/Instructions/20533D_LAB_AK_09.md
@@ -356,7 +356,7 @@
 
 #### Task 2: Configure SSO on a client computer
 
-1. From Microsoft Edge, browse to [**https://myapps.microsoft.com**](https://myapps.microsoft.com).
+1. Start Internet Explorer and browse to [**https://myapps.microsoft.com**](https://myapps.microsoft.com).
 
 2. On the **Microsoft Azure** page, click **Use another account**.
 
@@ -366,42 +366,33 @@
 
 5. On the Apps page, click the ellipsis next to the **Microsoft Account (Windows Live)** icon. Note that there is no option to update the credentials. 
 
-6. Switch to the PowerShell ISE window,  the console pane, enter the following command, and press Enter:
+6. Switch to the Internet Explorer window and, on the Apps page, click **Skype**. 
 
-  ```
-  Set-Service -Name 'wuauserv' -StartupType Manual
-  ```
-  
-7. Switch to the Microsoft Edge window and, on the Apps page, click **Skype**. 
+7. In the **Skype** dialog box, click **Install Now**.
 
-8. In the **Skype** dialog box, click **Install Now**.
+8. When prompted whether to run or save **Access Panel Extension.msi**, click **Run**.
 
-9. In the **Store** window, under the **My Apps Secure Sign-in Extension** header, click **Get**.
+9. On the **Welcome to the Access Panel Extension Setup Wizard** page, click **Next**.
 
-10. Wait for the extension to be downloaded and then switch back to the Microsoft Edge window.
+10. On the **Install Access Panel Extension** page, click **Install**.
 
-11. When prompted, in the **You have a new extension** dialog box in the Microsoft Edge window, click **Turn it on**.
+11. When prompted, in the **User Account Control** dialog box, click **Yes**. This will close all **Internet Explorer** windows.
 
-12. In the upper right corner of the Microsoft Edge window, click the ellipsis and, in the drop-down menu, click **Extensions**.
+12. On the **Complete the Access Panel Extension Setup Wizard** page, click **Finish**.
 
-13. Verify that My Apps Secure Sign-in Extension is turned on. If not, click **My Apps Secure Sign-in Extension** and move the slider to the **On** position.
+13. This will open a new Internet Explorer window. When prompted, click **Enable** and close the Internet Explorer window.
 
-14. Restart Microsoft Edge and browse back to [**https://myapps.microsoft.com**](https://myapps.microsoft.com). If prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account you created in the previous exercise and **Pa55w.rd** as the corresponding password. 
+14. Open an Internet Explorer window and, if prompted, sign it back using credentials of Mario Ledford's user account. 
 
-15. On the Apps page, click **Skype**. Note that you are prompted for credentials, because you did not enter any credentials on behalf of the user when configuring the application single sign-on settings.
+15. In the new Internet Explorer window, browse again to [**https://myapps.microsoft.com**](https://myapps.microsoft.com). If prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account you created in the previous exercise and **Pa55w.rd** as the corresponding password. 
 
-16. Click **Cancel** in the **Skype** dialog box.
+16. On the Apps page, click **Skype**. Note that you are prompted for credentials, because you did not enter any credentials on behalf of the user when configuring the application single sign-on settings.
 
-17. Click the user name in the upper right corner of the Microsoft Edge page and click **Sign out**.
+17. Click **Cancel** in the **Skype** dialog box.
 
-18. Close Microsoft Edge.
+18. Click the user name in the upper right corner of the Microsoft Edge page and click **Sign out**.
 
-19. Switch to the PowerShell ISE window,  the console pane, enter the following command, and press Enter:
-
-  ```
-  Set-Service -Name 'wuauserv' -StartupType Disabled
-  ```
-
+19. Close Internet Explorer.
 
 > **Result**: After completing this exercise, you should have configured test applications and validated the SSO experience.
 
