--- a/Instructions/20533D_LAB_09.md
+++ b/Instructions/20533D_LAB_09.md
@@ -269,26 +269,21 @@ The main tasks for this exercise are as follows:
 
 #### Task 2: Test SSO
   
-1. Open an Microsoft Edge window and browse to https://myapps.microsoft.com. When prompted, sign in by using specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account and the corresponding password **Pa55w.rd**. 
+1. Open an Internet Explorer window and browse to https://myapps.microsoft.com. When prompted, sign in by using specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account and the corresponding password **Pa55w.rd**. 
 
 2. On the applications page, click the ellipsis next to **Skype**. Note the option to update the credentials. 
 
 3. On the applications page, click the ellipsis next to **Microsoft Account**. Note that there is no option to update the credentials.
 
-4. Switch to the Windows PowerShell ISE window and use the Windows PowerShell **Set-Service** cmdlet to set the startup of the Windows Update service to manual.
+4. Switch back to the Internet Explorer window, click **Skype** and, when prompted, install the Access Panel Extension add-in with the default settings and enable the add-in once the installation completes.
 
-5. Switch back to the Microsoft Edge window, click **Skype** and, when prompted, install the My Apps Secure Sign-in Extension Microsoft Store app with the default settings and enable the extension once the installation completes.
+5. Restart Internet Explorer and browse to https://myapps.microsoft.com. When prompted, sign in as Mario Ledford.
 
-6. Restart Microsoft Edge and browse to https://myapps.microsoft.com. When prompted, sign in as Mario Ledford.
+6. From the Application Access Panel, start **Skype**. Note that you are now prompted for credentials, because you did not enter any credentials on behalf of the user when configuring SSO. 
 
-7. From the Application Access Panel, start **Skype**. Note that you are now prompted for credentials, because you did not enter any credentials on behalf of the user when configuring SSO. 
+7. Click **Cancel** in the **Skype** dialog box.
 
-8. Click **Cancel** in the **Skype** dialog box.
-
-9. Sign out from the Application Access Panel and close Microsoft Edge.
-
-10. Switch to the Windows PowerShell ISE window and use the Windows PowerShell **Set-Service** cmdlet to disable the Windows Update service.
-
+8. Sign out from the Application Access Panel and close Internet Explorer.
 
 > **Result**: After completing this exercise, you should have installed and configured a test application and validated the SSO experience.
 
