--- a/Instructions/20533E_LAB_AK_02.md
+++ b/Instructions/20533E_LAB_AK_02.md
@@ -187,7 +187,7 @@
 
   - Subscription: the name of your Azure subscription
 
-  - Virtual network: click **Choose a virtual network** and, on the **Choose virtual network** blade, click **20533E0202-vnet**
+  - Virtual network: click **Search virtual network** and select **20533E0202-vnet**
 
   - Allow virtual network access: **Enabled**
 
@@ -213,7 +213,7 @@
 
   - Subscription: the name of your Azure subscription
 
-  - Virtual network: click **Choose a virtual network** and, on the **Choose virtual network** blade, click **20533E0201-vnet**
+  - Virtual network: click **Select virtual network** and select **20533E0201-vnet**
 
   - Allow virtual network access: **Enabled**
 
