--- a/Instructions/20533E_LAB_AK_01.md
+++ b/Instructions/20533E_LAB_AK_01.md
@@ -13,7 +13,7 @@
 
 4. On the **Dashboard** page, right-click the **All resources** tile, and then click **6x4**.
 
-5. On the **Dashboard** page, move the **Service health** tile and the **Marketplace** tile such that their remain adjacent but their top edge aligns with the bottom edge of the **Quickstart tutorials** tile. 
+5. On the **Dashboard** page, move the **Service health** tile and the **Marketplace** tile such that they remain adjacent but their top edge aligns with the bottom edge of the **Quickstart tutorials** tile. 
 
 6. Click **Done customizing**.
 
