--- a/Instructions/20533E_LAB_AK_01.md
+++ b/Instructions/20533E_LAB_AK_01.md
@@ -29,9 +29,9 @@
 
 11. In the hub menu, click **All services**, and then, in the service menu, click **Subscriptions**.
 
-12. On the **Subscriptions** blade, click the entry reprsenting your Azure subscription.
+12. On the **Subscriptions** blade, click the entry representing your Azure subscription.
 
-13. On the blade representing your subscrption, in the **Overview** section, note the **Directory** entry, referencing the Azure Active Directory tenant associated with your subscription. In addition, note the **Change directory** entry in the toolbar, which allows you to switch the association to a different tenant.
+13. On the blade representing your subscription, in the **Overview** section, note the **Directory** entry, referencing the Azure Active Directory tenant associated with your subscription. In addition, note the **Change directory** entry in the toolbar, which allows you to switch the association to a different tenant.
 
 14. Leave the Microsoft Edge window open.
 
