Typo on line 398
'9. On the endpoint' instead of '9. On the edpoint'

--- a/Instructions/20533E_LAB_AK_05.md
+++ b/Instructions/20533E_LAB_AK_05.md
@@ -395,7 +395,7 @@
 
 8. In the list of endpoints, click the name of the web app, which name was included in the DNS records you noted in step 5.
 
-9. On the edpoint blade, click **Disabled**, and then click **Save**.
+9. On the endpoint blade, click **Disabled**, and then click **Save**.
 
 10. Switch to the command prompt, type the following command, replacing **`dnsname`** with the fully qualified DNS name of the Traffic Manager profile, and then press Enter:
 
